--- a/docker/cyton_ros2/src/ros2_RobotSimulation/Cyton/cyton_moveit/config/moveit_controllers.yaml
+++ b/docker/cyton_ros2/src/ros2_RobotSimulation/Cyton/cyton_moveit/config/moveit_controllers.yaml
@@ -21,8 +21,8 @@ moveit_simple_controller_manager:
       - wrist_roll_joint
   cyton_hand_controller:
     type: GripperCommand
+    action_ns: gripper_command
+    default: true
     joints:
       - gripper_joint
-      - gripper_joint2
-    action_ns: gripper_cmd
-    default: true
+      - mimic_gripper_joint
