--- a/docker/cyton_ros2/src/ros2_RobotSimulation/Cyton/cyton_moveit/config/ros2_controllers.yaml
+++ b/docker/cyton_ros2/src/ros2_RobotSimulation/Cyton/cyton_moveit/config/ros2_controllers.yaml
@@ -33,4 +33,4 @@ cyton_hand_controller:
   ros__parameters:
     joints:
       - gripper_joint
-      - gripper_joint2
+      - mimic_gripper_joint
