--- a/docker/cyton_ros2/src/ros2_RobotSimulation/Cyton/cyton_moveit/config/initial_positions.yaml
+++ b/docker/cyton_ros2/src/ros2_RobotSimulation/Cyton/cyton_moveit/config/initial_positions.yaml
@@ -5,7 +5,7 @@ initial_positions:
   elbow_roll_joint: 0
   elbow_yaw_joint: 0
   gripper_joint: 0
-  gripper_joint2: 0
+  mimic_gripper_joint: 0
   shoulder_pitch_joint: 0
   shoulder_roll_joint: 0
   wrist_pitch_joint: 0
