--- a/docker/cyton_ros2/src/ros2_RobotSimulation/Cyton/cyton_ros2_gazebo/config/cyton_controller.yaml
+++ b/docker/cyton_ros2/src/ros2_RobotSimulation/Cyton/cyton_ros2_gazebo/config/cyton_controller.yaml
@@ -92,7 +92,7 @@ joint_trajectory_controller:
         - wrist_pitch_joint
         - wrist_roll_joint
         - gripper_joint
-        - gripper_joint2
+        - mimic_gripper_joint
 
     command_interfaces:
       - position
