still: "[cyton_hand_controller]: Joint name cannot be empty"

--- a/docker/cyton_ros2/src/ros2_RobotSimulation/Cyton/cyton_moveit/config/moveit_controllers.yaml
+++ b/docker/cyton_ros2/src/ros2_RobotSimulation/Cyton/cyton_moveit/config/moveit_controllers.yaml
@@ -25,4 +25,4 @@ moveit_simple_controller_manager:
     default: true
     joints:
       - gripper_joint
-      - mimic_gripper_joint
+      # - mimic_gripper_joint
