cyton_hand_controller finally works

--- a/docker/cyton_ros2/src/ros2_RobotSimulation/Cyton/cyton_moveit/config/moveit_controllers.yaml
+++ b/docker/cyton_ros2/src/ros2_RobotSimulation/Cyton/cyton_moveit/config/moveit_controllers.yaml
@@ -21,7 +21,7 @@ moveit_simple_controller_manager:
       - wrist_roll_joint
   cyton_hand_controller:
     type: GripperCommand
-    action_ns: gripper_command
+    action_ns: gripper_cmd
     default: true
     joints:
       - gripper_joint
