--- a/docker/cyton_ros2/src/ros2_RobotSimulation/Cyton/cyton_moveit/config/ros2_controllers.yaml
+++ b/docker/cyton_ros2/src/ros2_RobotSimulation/Cyton/cyton_moveit/config/ros2_controllers.yaml
@@ -31,5 +31,4 @@ cyton_arm_controller:
       - velocity
 cyton_hand_controller:
   ros__parameters:
-    joints:
-      - gripper_joint
+    joint: "gripper_joint"
