--- a/docker/cyton_ros2/src/ros2_RobotSimulation/Cyton/cyton_moveit/config/joint_limits.yaml
+++ b/docker/cyton_ros2/src/ros2_RobotSimulation/Cyton/cyton_moveit/config/joint_limits.yaml
@@ -23,16 +23,16 @@ joint_limits:
     max_velocity: 1.0
     has_acceleration_limits: false
     max_acceleration: 0.0
-  gripper_joint:
-    has_velocity_limits: true
-    max_velocity: 1.0
-    has_acceleration_limits: false
-    max_acceleration: 0.0
-  mimic_gripper_joint:
-    has_velocity_limits: true
-    max_velocity: 1.0
-    has_acceleration_limits: false
-    max_acceleration: 0.0
+  # gripper_joint:
+  #   has_velocity_limits: true
+  #   max_velocity: 1.0
+  #   has_acceleration_limits: false
+  #   max_acceleration: 0.0
+  # mimic_gripper_joint:
+  #   has_velocity_limits: true
+  #   max_velocity: 1.0
+  #   has_acceleration_limits: false
+  #   max_acceleration: 0.0
   shoulder_pitch_joint:
     has_velocity_limits: true
     max_velocity: 1.0
