--- a/docker/cyton_ros2/src/ros2_RobotSimulation/Cyton/cyton_moveit/config/moveit_controllers.yaml
+++ b/docker/cyton_ros2/src/ros2_RobotSimulation/Cyton/cyton_moveit/config/moveit_controllers.yaml
@@ -5,7 +5,7 @@ moveit_controller_manager: moveit_simple_controller_manager/MoveItSimpleControll
 moveit_simple_controller_manager:
   controller_names:
     - cyton_arm_controller
-    - cyton_hand_controller
+    # - cyton_hand_controller
 
   cyton_arm_controller:
     type: FollowJointTrajectory
@@ -19,10 +19,10 @@ moveit_simple_controller_manager:
       - elbow_yaw_joint
       - wrist_pitch_joint
       - wrist_roll_joint
-  cyton_hand_controller:
-    type: GripperCommand
-    action_ns: gripper_cmd
-    default: true
-    joints:
-      - gripper_joint
+  # cyton_hand_controller:
+  #   type: GripperCommand
+  #   action_ns: gripper_cmd
+  #   default: true
+  #   joints:
+  #     - gripper_joint
       # - mimic_gripper_joint
