--- a/docker/cyton_ros2/src/ros2_RobotSimulation/Cyton/cyton_moveit/config/ros2_controllers.yaml
+++ b/docker/cyton_ros2/src/ros2_RobotSimulation/Cyton/cyton_moveit/config/ros2_controllers.yaml
@@ -7,8 +7,8 @@ controller_manager:
       type: joint_trajectory_controller/JointTrajectoryController
 
 
-    cyton_hand_controller:
-      type: position_controllers/GripperActionController
+    # cyton_hand_controller:
+    #   type: position_controllers/GripperActionController
 
 
     joint_state_broadcaster:
@@ -29,6 +29,6 @@ cyton_arm_controller:
     state_interfaces:
       - position
       - velocity
-cyton_hand_controller:
-  ros__parameters:
-    joint: "gripper_joint"
+# cyton_hand_controller:
+#   ros__parameters:
+#     joint: "gripper_joint"
