--- a/docker/cyton_ros2/src/ros2_RobotSimulation/Cyton/cyton_ros2_gazebo/CMakeLists.txt
+++ b/docker/cyton_ros2/src/ros2_RobotSimulation/Cyton/cyton_ros2_gazebo/CMakeLists.txt
@@ -19,7 +19,7 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(ros2_control REQUIRED)
 find_package(ros2_controllers REQUIRED)
-# find_package(dynamixel_hardware REQUIRED)
+find_package(dynamixel_hardware REQUIRED)
 # find_package(realsense2_description REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
