dummy cyton functional (no gripper)

--- a/docker/cyton_ros2/src/ros2_RobotSimulation/Cyton/cyton_moveit/config/initial_positions.yaml
+++ b/docker/cyton_ros2/src/ros2_RobotSimulation/Cyton/cyton_moveit/config/initial_positions.yaml
@@ -1,12 +1,19 @@
 # Default initial positions for cyton's ros2_control fake system
 
 initial_positions:
-  elbow_pitch_joint: -1.186
-  elbow_roll_joint: -1.326
-  elbow_yaw_joint: -1.256
-  # gripper_joint: 0
-  # mimic_gripper_joint: 0
-  shoulder_pitch_joint: -1.204
-  shoulder_roll_joint: 0.506
-  wrist_pitch_joint: -1.186
-  wrist_roll_joint:  0.436
+  # joint4: -1.186
+  # joint3: -1.326
+  # joint5: -1.256
+  # # gripper_joint: 0
+  # # mimic_gripper_joint: 0
+  # joint2: -1.204
+  # joint1: 0.506
+  # joint6: -1.186
+  # joint7:  0.436
+  joint4: 0
+  joint3: 0
+  joint5: 0
+  joint2: 0
+  joint1: 0
+  joint6: 0
+  joint7: 0
