--- a/docker/cyton_ros2/src/ros2_RobotSimulation/Cyton/cyton_moveit/config/moveit_controllers.yaml
+++ b/docker/cyton_ros2/src/ros2_RobotSimulation/Cyton/cyton_moveit/config/moveit_controllers.yaml
@@ -12,13 +12,13 @@ moveit_simple_controller_manager:
     action_ns: follow_joint_trajectory
     default: true
     joints:
-      - shoulder_roll_joint
-      - shoulder_pitch_joint
-      - elbow_roll_joint
-      - elbow_pitch_joint
-      - elbow_yaw_joint
-      - wrist_pitch_joint
-      - wrist_roll_joint
+      - joint1
+      - joint2
+      - joint3
+      - joint4
+      - joint5
+      - joint6
+      - joint7
   # cyton_hand_controller:
   #   type: GripperCommand
   #   action_ns: gripper_cmd
