--- a/docker/cyton_ros2/src/ros2_RobotSimulation/Cyton/cyton_moveit/config/ros2_controllers.yaml
+++ b/docker/cyton_ros2/src/ros2_RobotSimulation/Cyton/cyton_moveit/config/ros2_controllers.yaml
@@ -17,13 +17,13 @@ controller_manager:
 cyton_arm_controller:
   ros__parameters:
     joints:
-      - shoulder_roll_joint
-      - shoulder_pitch_joint
-      - elbow_roll_joint
-      - elbow_pitch_joint
-      - elbow_yaw_joint
-      - wrist_pitch_joint
-      - wrist_roll_joint
+      - joint1
+      - joint2
+      - joint3
+      - joint4
+      - joint5
+      - joint6
+      - joint7
     command_interfaces:
       - position
     state_interfaces:
