--- a/docker/cyton_ros2/src/ros2_RobotSimulation/Cyton/cyton_moveit/config/joint_limits.yaml
+++ b/docker/cyton_ros2/src/ros2_RobotSimulation/Cyton/cyton_moveit/config/joint_limits.yaml
@@ -28,11 +28,11 @@ joint_limits:
     max_velocity: 1.0
     has_acceleration_limits: false
     max_acceleration: 0.0
-  joint9:
-    has_velocity_limits: true
-    max_velocity: 1.0
-    has_acceleration_limits: false
-    max_acceleration: 0.0
+  # joint9:
+  #   has_velocity_limits: true
+  #   max_velocity: 1.0
+  #   has_acceleration_limits: false
+  #   max_acceleration: 0.0
   joint2:
     has_velocity_limits: true
     max_velocity: 1.0
