--- a/docker/cyton_ros2/src/ros2_RobotSimulation/Cyton/cyton_moveit/config/ros2_controllers.yaml
+++ b/docker/cyton_ros2/src/ros2_RobotSimulation/Cyton/cyton_moveit/config/ros2_controllers.yaml
@@ -1,20 +1,20 @@
 # This config file is used by ros2_control
 controller_manager:
   ros__parameters:
-    update_rate: 100  # Hz
+    update_rate: 200  # Hz
 
-    cyton_arm_controller:
+    joint_trajectory_controller:
       type: joint_trajectory_controller/JointTrajectoryController
 
 
-    cyton_hand_controller:
+    gripper_action_controller:
       type: position_controllers/GripperActionController
 
 
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
 
-cyton_arm_controller:
+joint_trajectory_controller:
   ros__parameters:
     joints:
       - joint1
@@ -22,14 +22,14 @@ cyton_arm_controller:
       - joint3
       - joint4
       - joint5
-      - joint7
       - joint6
+      - joint7
     command_interfaces:
       - position
     state_interfaces:
       - position
       - velocity
-cyton_hand_controller:
+gripper_action_controller:
   ros__parameters:
     joint: "joint8"
     # command_interfaces:
