--- a/docker/cyton_ros2/src/ros2_RobotSimulation/Cyton/cyton_ros2_gazebo/config/cyton_controller.yaml
+++ b/docker/cyton_ros2/src/ros2_RobotSimulation/Cyton/cyton_ros2_gazebo/config/cyton_controller.yaml
@@ -14,32 +14,50 @@ controller_manager:
     gripper_action_controller:
       type: position_controllers/GripperActionController
 
+# joint_trajectory_controller:
+#   ros__parameters:
+#     joints:
+#         - joint1
+#         - joint2
+#         - joint3
+#         - joint4
+#         - joint5
+#         - joint6
+#         - joint7
+
+#     command_interfaces:
+#       - position
+
+#     state_interfaces:
+#       - position
+#       - velocity
+
+#     state_publish_rate: 100.0
+#     action_monitor_rate: 20.0
+
+#     allow_partial_joints_goal: false
+#     open_loop_control: true
+
+# gripper_action_controller:
+#   ros__parameters:
+#     joint: joint8
 joint_trajectory_controller:
   ros__parameters:
     joints:
-        - joint1
-        - joint2
-        - joint3
-        - joint4
-        - joint5
-        - joint7
-        - joint6
-
+      - joint1
+      - joint2
+      - joint3
+      - joint4
+      - joint5
+      - joint6
+      - joint7
     command_interfaces:
       - position
-
     state_interfaces:
       - position
       - velocity
-
-    state_publish_rate: 100.0
-    action_monitor_rate: 20.0
-
-    allow_partial_joints_goal: false
-    open_loop_control: true
-
 gripper_action_controller:
   ros__parameters:
-    joint: joint8
+    joint: "joint8"
 
       
