--- a/docker/cyton_ros2/src/ros2_RobotSimulation/Cyton/cyton_moveit/package.xml
+++ b/docker/cyton_ros2/src/ros2_RobotSimulation/Cyton/cyton_moveit/package.xml
@@ -44,6 +44,8 @@
   <exec_depend>tf2_ros</exec_depend>
   <exec_depend>warehouse_ros_mongo</exec_depend>
   <exec_depend>xacro</exec_depend>
+  <exec_depend>ign_ros2_control</exec_depend>
+
 
 
   <export>
