--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -83,6 +83,6 @@ COPY docker/cyton_ros2/src/ros2_RobotSimulation/Cyton src/Cyton
 
 
 RUN /bin/bash -c "source /opt/ros/humble/setup.bash; \
-colcon build --packages-select dynamixel_hardware ign_ros2_control; \
+colcon build --packages-select dynamixel_hardware; \
 source install/setup.bash; \
 colcon build --packages-select cyton_ros2_gazebo cyton_moveit"
