--- a/docker/simulation/Dockerfile
+++ b/docker/simulation/Dockerfile
@@ -33,7 +33,7 @@ RUN apt-get update \
     ros-$ROS_DISTRO-ros2-controllers \
     ros-$ROS_DISTRO-gripper-controllers \
     # MoveIt
-    ros-$ROS_DISTRO-moveitZ
+    ros-$ROS_DISTRO-moveit
 
 RUN rosdep update
 
