--- a/docker/hardware/Dockerfile
+++ b/docker/hardware/Dockerfile
@@ -85,4 +85,4 @@ COPY ./src/ src/
 RUN /bin/bash -c "source /opt/ros/humble/setup.bash; \
 colcon build --packages-select dynamixel_hardware; \
 source install/setup.bash; \
-colcon build --packages-select cyton_ros2_gazebo cyton_moveit"
+colcon build --packages-select cyton_bringup cyton_moveit"
