--- a/docker/simulation/Dockerfile
+++ b/docker/simulation/Dockerfile
@@ -79,4 +79,4 @@ COPY ./src/ src/
 
 RUN /bin/bash -c "source /opt/ros/humble/setup.bash; \
 source install/setup.bash; \
-colcon build --packages-select cyton_ros2_gazebo cyton_moveit"
+colcon build --packages-select cyton_bringup cyton_moveit"
