--- a/src/cyton_bringup/package.xml
+++ b/src/cyton_bringup/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>cyton_ros2_gazebo</name>
+  <name>cyton_bringup</name>
   <version>0.0.0</version>
   <description>IFRA Group - Cranfield University. cyton Gazebo package for ROS2 simulation of the cyton Robot.</description>
 
