--- a/src/cyton_bringup/package.xml
+++ b/src/cyton_bringup/package.xml
@@ -13,7 +13,7 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <exec_depend>ign_ros2_control</exec_depend>
-  <!-- <exec_depend>dynamixel_hardware</exec_depend> -->
+  <exec_depend>dynamixel_hardware</exec_depend>
 
 
   <test_depend>ament_lint_auto</test_depend>
